-
Bug
-
Resolution: Fixed
-
P4: Low
-
6.7.3
-
None
-
-
ada885dfd (dev), b26e30e1b (6.9), 48c16d2d2 (6.8)
When we create a qaction with we shortcut parsed from a QString with a space it creates an invalid shortcut.
QAction *b = new QAction("test1action", this);
b->setShortcut(QKeySequence("Ctrl + Del"));
return shortcut == ""
Space breaks it.
I created an autotests for it.
Is it possible to fix it please ?
Thanks
| For Gerrit Dashboard: QTBUG-130063 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 597571,8 | QKeySequence: tolerate spaces when parsing a key sequence string | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 630812,2 | QKeySequence: tolerate spaces when parsing a key sequence string | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 631074,2 | QKeySequence: tolerate spaces when parsing a key sequence string | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |