QKeySequence: tolerate spaces when parsing a key sequence string

Fixes: QTBUG-130063
Pick-to: 6.8
Change-Id: I0f0aff0ca0824cd1c9297cd18a1f5cf9a2a44951
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit ada885dfd55d5c386d04039babee43e49ccab5c5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>